# llm-notes

./: .gitignore  README.md  README.zh-CN.md  idea.md  install.sh  pyproject.toml
llm_notes/: __init__.py  answers.py  chat.py  claude.py  codex.py  compile.py  ingest.py  lint.py  manifest.py  report.py  retrieval.py  search.py  semantic_lint.py  wiki.py
skills/kb-chat/: SKILL.md
skills/kb-compile/: SKILL.md
skills/kb-ingest/: SKILL.md
skills/kb-init/: SKILL.md
skills/kb-lint/: SKILL.md
skills/kb-qa/: SKILL.md
skills/kb-search/: SKILL.md
skills/kb-slides/: SKILL.md
skills/kb-viz/: SKILL.md
tests/: test_answers.py  test_chat.py  test_claude.py  test_codex.py  test_compile.py  test_ingest.py  test_lint.py  test_manifest.py  test_report.py  test_retrieval.py  test_search.py  test_semantic_lint.py  test_wiki.py
