[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-notes"
version = "0.1.0"
description = "Local helper package for llm-notes knowledge base skills"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
llm-notes-answers = "llm_notes.answers:main"
llm-notes-compile = "llm_notes.compile:main"
llm-notes-search = "llm_notes.search:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_notes*"]
