[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-notes"
version = "0.1.0"
description = "Local helper package for llm-notes knowledge base skills"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
llm-notes-answers = "llm_notes.answers:main"
llm-notes-chat = "llm_notes.chat:main"
llm-notes-claude = "llm_notes.claude:main"
llm-notes-compile = "llm_notes.compile:main"
llm-notes-codex = "llm_notes.codex:main"
llm-notes-lint = "llm_notes.lint:main"
llm-notes-report = "llm_notes.report:main"
llm-notes-retrieval = "llm_notes.retrieval:main"
llm-notes-search = "llm_notes.search:main"
llm-notes-semantic-lint = "llm_notes.semantic_lint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_notes*"]
